# tracy

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
config/: webpack.config.js
features/: tuples.feature
features/ch01/: tuples.feature
features/ch02/: tuples.feature
features/ch04/: transformations.feature
features/ch05/: intersections.feature  rays.feature  spheres.feature
features/ch06/: lights.feature  materials.feature  spheres.feature
public/: index.html
scenes/: ch05.yml  ch06.yml  ch07.yml  ch08.yml  ch09.yml  ch10a.yml  ch10b.yml  ch10c.yml  ch11.yml  ch12.yml  ch13.yml  cover.yml
src/: App.tsx  canvas.rs  index.tsx  lib.rs  main.rs  math.rs
src/math/: coords.rs  matrix.rs  mod.rs  ray.rs
src/query/: collision.rs  mod.rs  object.rs  ray.rs
src/rendering/: light.rs  material.rs  mod.rs
src/scene/: mod.rs
src/scenes/: clock.ts  clock.tsx  flat-sphere.ts  flat-sphere.tsx  mod.rs  phong.ts  phong.tsx  projectile.ts  projectile.tsx  scene.ts  scene.tsx
src/shape/: mod.rs  sphere.rs
tests/: ch01.rs  ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch06.rs
tracy/: Cargo.toml
tracy-ui/: Cargo.toml
tracy-ui/src/: main.rs  ui.rs
tracy-ui/src/scene/: ch02.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  ch08.rs  ch09.rs  ch10.rs  ch11.rs  ch12.rs  ch13.rs  cover.rs  mod.rs
tracy/benches/: perf.rs
tracy/features/ch02/: canvas.feature  tuples.feature
tracy/features/ch03/: matrices.feature
tracy/features/ch04/: transformations.feature
tracy/features/ch05/: intersections.feature  rays.feature  spheres.feature
tracy/features/ch06/: materials.feature  tuples.feature
tracy/features/ch07/: world.feature
tracy/src/: canvas.rs  lib.rs
tracy/src/math/: coords.rs  matrix.rs  mod.rs
tracy/src/query/: mod.rs  object.rs  ray.rs  world.rs
tracy/src/rendering/: camera.rs  canvas.rs  color.rs  light.rs  material.rs  mod.rs  pattern.rs
tracy/src/shape/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
tracy/tests/: ch01.rs  ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  ch08.rs  ch09.rs  ch10.rs  ch11.rs  ch12.rs  ch13.rs  utils.rs
tracy/tests/utils/: mod.rs
trtc-rs/: lib.rs
trtc-rs/scene/: mod.rs
trtc-rs/shape/: sphere.rs
www/: index.html  index.js  package-lock.json  package.json
