[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "trtc"
version = "0.1.0"

[dev-dependencies]
cucumber_rust = {version = "0.8.2", features = ["macros"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[[test]]
harness = false
name = "ch01"
