[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "tracy-ui"
version = "0.1.0"

[dependencies]
futures = "0.3.12"
imgui = "0.7.0"
imgui-wgpu = "0.14.0"
imgui-winit-support = "0.7.0"
lazy_static = "1.4.0"
tracy = {path = "../tracy"}
wgpu = "0.7"
winit = "0.24.0"
