[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "tracy-ui"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
futures = "0.3.12"
image = "0.23.13"
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
imgui-winit-support = "0.11.0"
lazy_static = "1.4.0"
serde = "1.0"
serde_yaml = "0.8"
tracy = { path = "../tracy" }
wgpu = "0.17"
winit = { version = "0.27.5", features = ["wayland"], default-features = false }
