[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "tracy"
version = "0.1.0"

[dependencies]
itertools = "0.10.0"

[dev-dependencies]
cucumber_rust = {version = "0.8.2", features = ["macros"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
